--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
+    "just-clone": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
